# hammock

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: CONTRIBUTING.md  DISCLAIMER.md  PRIVACY.md  README.md
src/: caption_sink.rs  caption_sink_json.rs  config.rs  main.rs  transcription.rs  voice.rs
src/captions/: json.rs  mod.rs
src/summaries/: mod.rs  openai.rs
src/telemetry/: metrics.rs  mod.rs  server.rs
src/utils/: discord.rs  mod.rs
src/voice/: mod.rs  roster.rs
