[package]
name = "hammock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
] }
dashmap = "6.1.0"
serenity = { version = "0.12.4", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "voice",
] }
songbird = { version = "0.5.0", default-features = false, features = [
    "driver",
    "gateway",
    "receive",
    "serenity",
    "rustls",
    "tungstenite",
] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
    "sync",
    "process",
    "io-util",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
whisper-rs = { version = "0.15.1", default-features = false }
poise = "0.6.1"
dotenvy = "0.15.7"
which = "8.0.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "stream",
    "multipart",
    "json",
] }
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
symphonia = { version = "0.5.2", default-features = false, features = [
    "mpa",
    "mp3",
] }

[features]
default = []
cuda = ["whisper-rs/cuda"]

[patch.crates-io]
whisper-rs-sys = { path = "vendor/whisper-rs-sys" }
